welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:3: error: '<-' expected but ')' found.
for(nbPas <1 to 8) {
                 ^Runner:13: error: illegal start of simple expression
	}
        ^